--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -55,6 +55,15 @@
         "N\u00e3o aposte nisso.",
         "Esque\u00e7a isso."
     ],
+    "par": [
+        "Par",
+        "Impar"
+    ],
+    "jokenpo": [
+        "Pedra",
+        "Tesoura",
+        "Papel"
+    ],
     "nodatafound": "Dados anteriores n\u00e3o encontrados.",
     "currentlang": "\/me Idioma definido: %%LANGUAGE%%",
     "langerror": "\/me O idioma que voc\u00ea selecionou n\u00e3o est\u00e1 dispon\u00edvel. Por favor, visite %%LINK%% para encontrar uma lista de idiomas dispon\u00edveis.",
