--- a/lang/pt-BR.json
+++ b/lang/pt-BR.json
@@ -83,6 +83,7 @@
     "isopen": "\/me A roleta foi iniciada! Use !join para participar! (Jogo onde um participante aleat\u00f3rio \u00e9 movido para uma posi\u00e7\u00e3o aleat\u00f3ria na fila de espera)",
     "winnerpicked": "\/me Um vencedor foi escolhido! @%%NAME%% ganhou a posi\u00e7\u00e3o %%POSITION%%.",
     "ball": "\/me A pergunta de %%NAME%% foi: \"%%QUESTION%%\" e a resposta de %%BOTNAME%% \u00e9: \"%%RESPONSE%%\"",
+    "jokenpo": "\/me %%NAME%% jogou: \"%%QUESTION%%\" e a jogada de %%BOTNAME%% \u00e9: \"%%RESPONSE%%\"",
     "notghosting": "[%%NAME1%%] %%NAME2%% n\u00e3o virou fantasma.",
     "ghosting": "[%%NAME1%%] %%NAME2%% deve ter virado fantasma.",
     "alreadyadding": "\/me Usu\u00e1rio j\u00e1 est\u00e1 sendo adicionado! Posi\u00e7\u00e3o desejada alterada para %%POSITION%%.",
